# g13

./: .gitignore  91-g13.rules  91-g13.rules.tmpl  CMakeLists.txt  Makefile  README  README.md  README.org  clock.sh  clock.sh.tmpl  eve-online.bind  g13  g13.cc  g13.h  g13_fonts.cc  g13_keys.cc  g13_lcd.cc  g13_log.cc  g13_main.cc  g13_stick.cc  g13_test.py  g13logging.cc  g13logging.h  g13map.cc  g13map.h  helper.hpp  hon.bind  logo.h  modifiertest.bind  pbm2lpbm.c  spring.bind  starcraft.lpbm  starcraft2.bind
res/: clock.sh  hello.lpbm  logo.lpbm  war.bind
src/: g13.h  g13_fonts.cc  g13_keys.cc  g13_lcd.cc  g13_stick.cc  helper.cpp  pbm2lpbm.c
sys/: 91-g13d.rules  default.bind  g13d.service
